--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,28 @@ nav ul {
 }
 
 nav a {
-  /* background-color: #ffffff; */
   text-decoration: none;
   position: relative;
 }
+
+/* active tab effect */
+.active{
+  position: relative;
+  color:black;
+}
+
+.active::after{
+  content: "";
+  display:block;
+  width: 100%;
+  transition: width 0.3s ease;
+  position:absolute;
+  background-color: rgb(161, 0, 0);
+  height: 2px;
+  bottom: 1px;
+}
+
+
 
 nav a::after{
   content: "";
@@ -102,26 +120,26 @@ nav a:hover::after{
   width: 100%;
 }
 
+/* About us page button,  */
+
 .button-primary{
   background-color:darkgreen;
-  animation: changingColor 5s infinite;
+  /* animation: changingColor 5s infinite; */
   display: block;
   padding: 10px 15px;
-  border-radius: 6px;
-  border: 0.5px solid rgb(98, 98, 98);
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 5px #999;
   color: white;
-  transition: 0.2s linear;
   width: 130px;
   text-align: center;
-  transition: 0.2s linear;
+  transition: 0.01s linear;
 }
 
 .button-primary:hover{
-  background-color: rgb(0, 150, 0);
+  background-color: rgb(0, 69, 0);
   cursor: pointer;
-  box-shadow: 0 6px 8px 4px rgba(0,0,0,0.5);
-  transition: 0.2s linear;
+  transition: 0.01s linear;
 }
 /* Override the spreading line effect for .nav-button links */
 .button-primary a::after {
@@ -132,6 +150,13 @@ nav a:hover::after{
   width:0%;
 }
 
+.button-primary:active{
+  box-shadow: 0 2px #666;
+  transform: translateY(4px);
+}
+
+
+/* second-typed button  */
 .button-secondary{
   background-color: black;
   color: white;
