--- a/src/Order_Page/Order.css
+++ b/src/Order_Page/Order.css
@@ -43,9 +43,15 @@
 .orderBoard{
     display: flex;
     flex-direction: column;
-    align-items:center;
-    justify-content: space-between;
+    justify-items: space-between;
     height: 500px;
+    width: 20%;
+}
+
+.orderList{
+    border: 1px solid red;
+    overflow-y: auto;
+    flex-grow: 1;
 }
 
 .searchBar{
@@ -58,9 +64,19 @@
     width: 50%;
 }
 
+/* add and subtract quantity button */
+
 .quantity-button{
     background-color:darkgreen;
     color: white;
+}
+
+.quantity-button:hover{
+    background-color: rgb(0, 70, 0);
+}
+
+.quantity-button:active{
+    background-color: darkgreen;
 }
 
 .buttonArea{
@@ -73,22 +89,76 @@
 .menuPageButton{
     display: flex;
     border-radius: 6px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    transition: 0.2s linear;
+    box-shadow: 0 4px rgba(0,0,0,0.1);
+    transition: 0.01s linear;
     padding: 10px;
     text-align: center;
     justify-content: center;
     align-items: center;
 }
 
+.menuPageButton:active{
+    box-shadow: 0 1px #9e9e9e;
+    transform: translateY(4px)
+}
+
+/* Add to cart button */
+
 .addButton {
     display: flex;
     background-color: red;
 }
+
+.addButton:hover{
+    background-color: rgb(234, 0, 0);
+}
+.addButton:active{
+    background-color: red;
+}
+
 
 .orderButton{
     display: flex;
     background-color: darkgreen;
     color:white;
     padding: 10px 30px 10px;
+    border-radius: 6px;
+    box-shadow: 0 4px rgba(0,0,0,0.1);
+    transition: 0.01s linear;    
 }
+
+.orderButton:active{
+    transform: translateY(4px);
+    box-shadow: 0 1px #9e9e9e;
+    background-color: darkgreen;
+}
+
+.orderButton:hover{
+    background-color: rgb(0, 70, 0);
+}
+
+
+/* remove button */
+
+.removeButton{
+    display:inline-flex;
+    background-color: red;
+    text-align: center;
+    border-radius: 6px;
+    box-shadow: 0 4px rgba(0,0,0,0.1);
+    transition: 0.01s linear;
+    padding: 4px;
+    height: fit-content;
+}
+
+.removeButton:hover{
+    background-color: rgb(234, 0, 0)
+}
+
+.removeButton:active{
+    background-color: red;
+    transform: translateY(4px);
+    box-shadow: 0 1px rgba(160, 159, 159, 0.768);
+}
+
+
